Fix various broken styles

--- a/assets/app/layout/marketing.scss
+++ b/assets/app/layout/marketing.scss
@@ -28,11 +28,11 @@
       min-width: var(--min-width-button);
       flex: 1 0 0;
     }
-
-    .page-page-weekly &,
-    .page-page-nightly & {
-      margin: 0;
-    }
+    // 
+    // .page-page-weekly &,
+    // .page-page-nightly & {
+    //   margin: 0;
+    // }
 
     .button_large { margin: 10px; }
   }
